# Expense-Tracker

./: .replit  README.md  main.py  pyproject.toml  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: .agent_state_10823a6de9dfff7a364073d25e0c7931956432a7.json  .agent_state_1656a44cb2daa2bdf972cd7e7d6a1e9e5e752822.json  .agent_state_48db693224158a4163faf25fc1d0629f8f3830c6.json  .agent_state_5fb2a62a8c9adfacaf969d0d686d6e8401555ee6.json  .agent_state_92763bb0b7b33cd73c41361ba03a848236c25d9f.json  .agent_state_c9575556163cd661e1c54e03b752b6838bdc972b.json  .agent_state_main.json  repl_state.json
.upm/: store.json
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html  register.html
